sword collison kill message

--- a/docker/supervisord/zelda.conf
+++ b/docker/supervisord/zelda.conf
@@ -1,5 +1,5 @@
 [program:zelda]
-command=nodemon /www/ige/server/ige.js -g /www/zelda
+command=nodemon -L /www/ige/server/ige.js -g /www/zelda
 autostart=true
 autorestart=true
 environment=NODE_ENV=production
